# JETANK

./: README.md
SCSCtrl/: README.md  install.sh  pyproject.toml  setup.py
config/: servoInt.py
docs/ko/: colorRecognition_ko.ipynb  colorTracking_ko.ipynb  ctrl_ko.ipynb  gamepadCtrl_ko.ipynb  motionDetect_ko.ipynb  servos_ko.ipynb
